--- a/src/BarChartRaceNet/BarChartRaceNet.csproj
+++ b/src/BarChartRaceNet/BarChartRaceNet.csproj
@@ -18,7 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
+    <PackageReference Include="FFMpegCore" Version="2.2.2" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="MahApps.Metro" Version="2.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Ookii.Dialogs.Wpf.NETCore" Version="2.1.0" />
   </ItemGroup>
 </Project>
