DatasetView is able to visualize the csv data. Add DatasetViewTest to test DatasetView. Update csv test file. OPen the last opened csv file.

--- a/src/BarChartRaceNetTestApp/BarChartRaceNetTestApp.csproj
+++ b/src/BarChartRaceNetTestApp/BarChartRaceNetTestApp.csproj
@@ -19,6 +19,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="TestData\CountryTest.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="TestData\CountryTest.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.1.1" />
   </ItemGroup>
 
