--- a/src/BarChartRaceNet/BarChartRaceNet.csproj
+++ b/src/BarChartRaceNet/BarChartRaceNet.csproj
@@ -7,6 +7,11 @@
     <Platforms>AnyCPU;x64</Platforms>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+    <Version>0.1.0.1</Version>
+    <Company>Cekli</Company>
+    <PackageProjectUrl>https://github.com/yoyokits/BarChartRaceNet</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/yoyokits/BarChartRaceNet</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,10 +23,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="26.1.0" />
-    <PackageReference Include="FFMpegCore" Version="4.1.0" />
+    <PackageReference Include="CsvHelper" Version="27.1.1" />
+    <PackageReference Include="FFMpegCore" Version="4.5.0" />
     <PackageReference Include="log4net" Version="2.0.12" />
-    <PackageReference Include="MahApps.Metro" Version="2.4.4" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Ookii.Dialogs.Wpf.NETCore" Version="2.2.1" />
   </ItemGroup>
