--- a/src/BarChartRaceNetTestApp/BarChartRaceNetTestApp.csproj
+++ b/src/BarChartRaceNetTestApp/BarChartRaceNetTestApp.csproj
@@ -4,10 +4,14 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
-    <Version>0.1.0</Version>
+    <Version>0.1.0.1</Version>
     <Platforms>AnyCPU;x64</Platforms>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+    <Company>Cekli</Company>
+    <RepositoryUrl>https://github.com/yoyokits/BarChartRaceNet</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/yoyokits/BarChartRaceNet</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -29,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MahApps.Metro" Version="2.4.4" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.7" />
   </ItemGroup>
 
   <ItemGroup>
